--- a/CSS/styles2.css
+++ b/CSS/styles2.css
@@ -48,38 +48,41 @@ input{
     border-radius: 10px;
 }
 
-button{
-    float: right;
-    background-color: black;
+input[type="submit"]{
+    width: 300px;
+    height: 50px;
+    border: 1px solid;
+    background: black;
+    border-radius: 25px;
+    font-size: 18px;
     color: white;
-    padding: .5rem;
-    border: none;
-    width: 100%;
-    border-radius: 5px;
-    margin-right: 10px;
-    text-decoration: none;
+    cursor: pointer;
+    outline: none;
 }
-
-button:hover{
+input[type="submit"]:hover{
     background-color: white;
+    border-color: black;
+    transition: .5s;
     color: black;
 }
 
 a{
     float: left;
     margin-left: 10px;
-    padding: .5rem;
     text-decoration: none;
 }
 
-a .registrar:hover{
-    color: white;
+.registrar a:hover{
+    background-color: white;
+    border-color: black;
+    transition: .5s;
+    color: black;
 }
+
 .registrar{
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
 .registrar a{
     text-decoration: none;
