--- a/CSS/styles4.css
+++ b/CSS/styles4.css
@@ -8,8 +8,7 @@ body{
     margin: 0;
     font-family: sans-serif;
     position: relative;
-    padding-bottom: 157em;
-    min-height: 100vh;
+    
 }
 header{
     width: 100%;
@@ -17,55 +16,40 @@ header{
     margin-top: 11px;
     background-color: #f6f6fe;
     position: static;
+    background: transparent;
 }
 header .container{
     display: flex;
-    justify-content:space-around;
     margin-right: 123px;
     margin-left: 123px;
     align-items: center;
     background-color: #f6f6fe;
+    background: transparent;
 }
 header .container img{
     height: 150px;
 }
-
 @import url(https://fonts.googleapis.com/css?family=opensans:500);
-body{
-                background: #f6f6fe;
-                color:black;
-                font-family: 'Open Sans', sans-serif;
-                max-height:700px;
-                overflow: hidden;
-            }
-            .c{
+.c{
                 text-align: center;
                 display: block;
                 position: relative;
                 width:80%;
-                margin:100px auto;
+                margin:20px auto;
             }
             ._404{
-                font-size: 220px;
+                font-size: 190px;
                 position: relative;
                 display: inline-block;
                 z-index: 2;
-                height: 250px;
-                letter-spacing: 15px;
             }
             ._1{
                 text-align:center;
                 display:block;
                 position:relative;
                 letter-spacing: 12px;
-                font-size: 4em;
+                font-size: 3em;
                 line-height: 80%;
-            }
-            ._2{
-                text-align:center;
-                display:block;
-                position: relative;
-                font-size: 20px;
             }
             .text{
                 font-size: 70px;
@@ -73,32 +57,32 @@ body{
                 position: relative;
                 display: inline-block;
                 margin: 19px 0px 0px 0px;
-                /* top: 256.301px; */
                 z-index: 3;
                 width: 100%;
                 line-height: 1.2em;
                 display: inline-block;
             }
-           
-
-            .btn{
-                background-color: rgb( 255, 255, 255 );
-                position: relative;
-                display: inline-block;
-                width: 358px;
-                padding: 5px;
-                z-index: 5;
-                font-size: 25px;
-                margin:0 auto;
-                color:black;
-                text-decoration: none;
-                margin-right: 10px
+            input[type="submit"]{
+                width: 300px;
+                height: 50px;
+                border: 1px solid;
+                background: black;
+                border-radius: 25px;
+                font-size: 18px;
+                color: white;
+                cursor: pointer;
+                outline: none;
+            }
+            input[type="submit"]:hover{
+                background-color: white;
+                border-color: black;
+                transition: .5s;
+                color: black;
             }
             .right{
                 float:right;
                 width:60%;
             }
-            
             hr{
                 padding: 0;
                 border: none;
@@ -110,62 +94,50 @@ body{
                 height:10px;
                 z-index: -10;
             }
-            
             hr:after {
                 content: "\2022";
                 display: inline-block;
                 position: relative;
                 top: -0.75em;
                 font-size: 2em;
-                padding: 0 0.2em;
-               
+                padding: 0 0.2em;  
             }
-            
             .cloud {
                 width: 350px; height: 120px;
-
                 background: #819FF7;
                 background: linear-gradient(top, #819FF7 100%);
                 background: -webkit-linear-gradient(top, #819FF7 100%);
                 background: -moz-linear-gradient(top, #819FF7 100%);
                 background: -ms-linear-gradient(top, #819FF7 100%);
                 background: -o-linear-gradient(top, #819FF7 100%);
-
                 border-radius: 100px;
                 -webkit-border-radius: 100px;
                 -moz-border-radius: 100px;
-
                 position: absolute;
                 margin: 120px auto 20px;
                 z-index:-1;
                 transition: ease 1s;
             }
-
             .cloud:after, .cloud:before {
                 content: '';
                 position: absolute;
                 background: #819FF7;
                 z-index: -1
             }
-
             .cloud:after {
                 width: 100px; height: 100px;
                 top: -50px; left: 50px;
-
                 border-radius: 100px;
                 -webkit-border-radius: 100px;
                 -moz-border-radius: 100px;
             }
-
             .cloud:before {
                 width: 180px; height: 180px;
                 top: -90px; right: 50px;
-
                 border-radius: 200px;
                 -webkit-border-radius: 200px;
                 -moz-border-radius: 200px;
             }
-            
             .x1 {
                 top:-50px;
                 left:100px;
@@ -177,7 +149,6 @@ body{
                 -moz-animation: moveclouds 15s linear infinite;
                 -o-animation: moveclouds 15s linear infinite;
             }
-            
             .x1_5{
                 top:-80px;
                 left:250px;
@@ -188,7 +159,6 @@ body{
                 -moz-animation: moveclouds 17s linear infinite;
                 -o-animation: moveclouds 17s linear infinite; 
             }
-
             .x2 {
                 left: 250px;
                 top:30px;
@@ -200,46 +170,36 @@ body{
                 -moz-animation: moveclouds 25s linear infinite;
                 -o-animation: moveclouds 25s linear infinite;
             }
-
             .x3 {
                 left: 250px; bottom: -70px;
-
                 -webkit-transform: scale(0.6);
                 -moz-transform: scale(0.6);
                 transform: scale(0.6);
                 opacity: 0.8; 
-
                 -webkit-animation: moveclouds 25s linear infinite;
                 -moz-animation: moveclouds 25s linear infinite;
                 -o-animation: moveclouds 25s linear infinite;
             }
-
             .x4 {
                 left: 470px; botttom: 20px;
-
                 -webkit-transform: scale(0.75);
                 -moz-transform: scale(0.75);
                 transform: scale(0.75);
                 opacity: 0.75;
-
                 -webkit-animation: moveclouds 18s linear infinite;
                 -moz-animation: moveclouds 18s linear infinite;
                 -o-animation: moveclouds 18s linear infinite;
             }
-
             .x5 {
                 left: 200px; top: 300px;
-
                 -webkit-transform: scale(0.5);
                 -moz-transform: scale(0.5);
                 transform: scale(0.5);
-                opacity: 0.8; 
-
+                opacity: 0.8;
                 -webkit-animation: moveclouds 20s linear infinite;
                 -moz-animation: moveclouds 20s linear infinite;
                 -o-animation: moveclouds 20s linear infinite;
             }
-
             @-webkit-keyframes moveclouds {
                 0% {margin-left: 1000px;}
                 100% {margin-left: -1000px;}
