--- a/CSS/styles2.css
+++ b/CSS/styles2.css
@@ -1,115 +1,79 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap');
+
 *{
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: sans-serif;
 }
 
 body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    flex-direction: column;
     background-image: url(/imagenes/1.jpg);
 }
 
-form{
-    height: 470px;
-    border: 2px solid black;
-    padding: 2rem;
+.contenedor{
+    width: 330px;
+    padding: 2rem 1rem;
+    margin: 162px auto;
     background-color: #D358F7;
-    border: none;
-    border-radius: 10px;
-    justify-content: center;
-    align-items: center;
+    border-radius: 15px;
+    text-align: center;
+    box-shadow: 0 20px 35px rgba(0, 0, 0, 0.5);
 }
 
-h1{
-    display: block;
-    border: 2px solid #D358F7;
-    padding: 10px;
-    margin: 10px;
-    border-radius: 10px;
+form input{
+    width: 92%;
+    outline: none;
+    padding: .5rem;
+    border: 1px solid black;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    font-size: 15px;
+    background-color: #e4e4e4;
 }
 
 label{
-    font-size: 18px;
-    padding: 10px;
-    font-weight: 300;
-}
-
-input{
-    display: block;
-    border: 2px solid black;
-    width: 95%;
-    padding: 10px;
-    margin: 10px;
-    border-radius: 10px;
-}
-
-input[type="submit"]{
-    width: 300px;
-    height: 50px;
-    border: 1px solid;
-    background: black;
-    border-radius: 25px;
-    font-size: 18px;
-    color: white;
-    cursor: pointer;
-    outline: none;
-}
-input[type="submit"]:hover{
-    background-color: white;
-    border-color: black;
-    transition: .5s;
-    color: black;
-}
-
-a{
+    font-size: 20px;
     float: left;
-    margin-left: 10px;
+    font-weight: bold;
+}
+
+.button{
+    font-size: 20px;
+    font-weight: bold;
     text-decoration: none;
-}
-
-.registrar a:hover{
-    background-color: white;
-    border-color: black;
-    transition: .5s;
-    color: black;
-}
-
-.registrar{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.registrar a{
-    text-decoration: none;
-    color: #303030;
-}
-
-.administrador a{
-    text-decoration: none;
-    color: #303030;
-}
-
-.administrador a:hover{
-    background-color: white;
-    border-color: black;
-    transition: .5s;
-    color: black;
-}
-
-.administrador{
-    display: flex;
-    height: 50px;
-    width: 400px;
-    margin-top: 15px;
-    border: 2px solid black;
-    background-color: #D358F7;
+    padding: 10px;
+    border-radius: 15px;
+    outline: none;
     border: none;
-    border-radius: 20px;
-    justify-content: center;
-    align-items: center;
+    background-color: rgb(243, 243, 243);
+    cursor: pointer;
+}
+
+.button:hover{
+    background-color: #9065CA;
+    color: #fff;
+}
+
+.Boton_Ingresar{
+    color: aliceblue;
+    font-size: 20px;
+}
+
+.button2{
+    margin-top: 10px;
+    font-size: 15px;
+    font-weight: bold;
+    text-decoration: none;
+    padding: 10px;
+    border-radius: 15px;
+    outline: none;
+    border: none;
+    background-color: rgb(243, 243, 243);
+    cursor: pointer;
+}
+
+.button2:hover{
+    background-color: #9065CA;
+    color: #fff;
 }
