--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -8,7 +8,6 @@ body{
     margin: 0;
     font-family: sans-serif;
     position: relative;
-    padding-bottom: 157em;
     min-height: 100vh;
 }
 header{
@@ -151,8 +150,8 @@ h1{
     margin: auto;
 }
 .container3 .card{
-    width: 225px;
-    height: 375px;
+    width: 230px;
+    height: 450px;
     border-radius: 8px;
     box-shadow: o 2px 2px rgba(0, 0, 0, 0.2);
     overflow: hidden;
@@ -160,8 +159,8 @@ h1{
     text-align: center;
 }
 .container3 .card img{
-    width: 225px;
-    height: 190px;
+    width: 230px;
+    height: 230px;
 }
 .container3 .card h5{
     color: red;
@@ -197,12 +196,13 @@ h1{
     font-size: 2rem;
     cursor: pointer;
 }
+
 footer{
-    position: absolute;
-    position: absolute;
+    margin-top: 203%;
     bottom: 0;
     width: 100%;
 }
+
 .pie-pagina{
     width: 100%;
     background-color: #81F7F3;
@@ -259,7 +259,7 @@ footer{
 }
 @media screen and (max-width:800px){
     .pie-pagina .grupo-1{
-        width: 90%;
+        width: 100%;
         grid-template-columns: repeat(1, 1fr);
         grid-gap: 30px;
         padding: 35px 0px;
