--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -72,8 +72,27 @@ input[type="submit"]:hover{
     transition: .5s;
     color: black;
 }
+
+.nav-secundario{
+    width: 100%;
+    min-height: 40px;
+    background-color: #9065CA;
+    display: flex;
+    justify-content: space-between;
+}
+.nav-secundario .izquierda{
+    margin-left: 100px;
+}
+
+.nav-secundario .derecha{
+    margin-right: 100px;
+}
+
 .nav-secundario .link-secundarios{
     width: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: 50px;
     border: 1px solid;
     font-size: 18px;
@@ -81,36 +100,18 @@ input[type="submit"]:hover{
     cursor: pointer;
     outline: none;
 }
+.nav-secundario .link-secundarios a{
+    color: black;
+    text-decoration: none;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-transform: capitalize;
+}
 .nav-secundario .link-secundarios:hover{
     border-radius: 10px;
     background-color: #bca2e0;
     border-color: black;
     transition: .5s;
     color: black;
-}
-header .nav-secundario{
-    width: 100%;
-    min-height: 45px;
-    background-color: #9065CA;
-    display: flex;
-    justify-content: space-between;
-}
-header .nav-secundario .izquierda{
-    margin-left: 100px;
-}
-header .nav-secundario .derecha{
-    margin-right: 100px;
-}
-header .nav-secundario .link-secundarios{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-header .nav-secundario .link-secundarios a{
-    text-decoration: none;
-    color: black;
-    font-family: sans-serif;
-    text-transform: capitalize;
 }
 hr{
     width: 40%;
