--- a/CSS/styles3.css
+++ b/CSS/styles3.css
@@ -1,79 +1,152 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap');
-
 *{
-    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: sans-serif;
 }
-
 body{
-    background-image: url(/imagenes/1.jpg);
+    margin: 0;
+    font-family: sans-serif;
+    position: relative;
+    padding-bottom: 157em;
+    min-height: 100vh;
 }
-
-.contenedor{
-    width: 330px;
-    padding: 2rem 1rem;
-    margin: auto;
-    background-color: #D358F7;
-    border-radius: 15px;
-    text-align: center;
-    box-shadow: 0 20px 35px rgba(0, 0, 0, 0.5);
+header{
+    width: 100%;
+    min-height: 4px;
+    background-color: #f6f6fe;
+    position: static;
 }
-
-form input{
-    width: 92%;
-    outline: none;
-    padding: .5rem;
-    border: 1px solid black;
+header .container{
+    display: flex;
+    justify-content:space-around;
+    margin-right: 123px;
+    margin-left: 123px;
+    align-items: center;
+    background-color: #f6f6fe;
+}
+header .container img{
+    height: 60px;
+}
+header .container .buscar{
+    position: relative;
+}
+header .container .buscar input{
+    width: 500px;
+    padding: 10px;
+    padding-right: 35px;
     border-radius: 5px;
-    margin-bottom: 10px;
-    font-size: 15px;
-    background-color: #e4e4e4;
-}
-
-label{
-    font-size: 20px;
-    float: left;
-    font-weight: bold;
-}
-
-.button{
-    font-size: 20px;
-    font-weight: bold;
-    text-decoration: none;
-    padding: 10px;
-    border-radius: 15px;
+    border: 3;
     outline: none;
-    border: none;
-    background-color: rgb(243, 243, 243);
+    font-size: 1rem;
+}
+header .container .buscar button{
+    background: black;
+    padding: 10px 15px;
+    position: absolute;
+    border: 3;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+    border-radius: 0 5px 5px 0;
+    color: white;
     cursor: pointer;
 }
-
-.button:hover{
-    background-color: #9065CA;
-    color: #fff;
+header .container .buscar button:hover{
+    background-color: red;
+}
+.container .btn-menu label{
+    color: black;
+    font-size: 35px;
+	cursor: pointer;
+}
+.container .menu{
+	float: right;
+	line-height: 100px;
+}
+.container .menu a{
+	display: inline-block;
+	padding: 15px;
+	line-height: normal;
+	text-decoration: none;
+	color: #fff;
+	transition: all 0.3s ease;
+	border-bottom: 2px solid transparent;
+	font-size: 15px;
+	margin-right: 5px;
+}
+.container .menu a:hover{
+	border-bottom: 2px solid #c7c7c7;
+	padding-bottom: 5px;
+}
+#btn-menu{
+	display: none;
+}
+.container-menu{
+	position: absolute;
+	background: rgba(0,0,0,0.5);
+	width: 100%;
+	height: 100vh;
+	top: 0;left: 0;
+	transition: all 500ms ease;
+	opacity: 0;
+	visibility: hidden;
+}
+#btn-menu:checked ~ .container-menu{
+	opacity: 1;
+	visibility: visible;
+}
+.cont-menu{
+	width: 100%;
+	max-width: 250px;
+	background: #1c1c1c;
+	height: 100vh;
+	position: relative;
+	transition: all 500ms ease;
+	transform: translateX(-100%);
+}
+#btn-menu:checked ~ .container-menu .cont-menu{
+	transform: translateX(0%);
+}
+.cont-menu nav{
+	transform: translateY(15%);
+}
+.cont-menu nav a{
+	display: block;
+	text-decoration: none;
+	padding: 20px;
+	color: #c7c7c7;
+	border-left: 5px solid transparent;
+	transition: all 400ms ease;
+}
+.cont-menu nav a:hover{
+	border-left: 5px solid #c7c7c7;
+	background: #1f1f1f;
+}
+.cont-menu label{
+	position: absolute;
+	right: 5px;
+	top: 10px;
+	color: #fff;
+	cursor: pointer;
+	font-size: 18px;
 }
 
-.Boton_Ingresar{
-    color: aliceblue;
-    font-size: 20px;
-}
-
-.button2{
-    margin-top: 10px;
-    font-size: 15px;
-    font-weight: bold;
+.cerrarsesion{
+    display: block;
+    width: 133px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 600;
+    border: 1px solid rgb(0, 0, 0);
+    background-color: transparent;
+    color: black;
+    padding: 5px 1px;
+    border-radius: 10px;
     text-decoration: none;
-    padding: 10px;
-    border-radius: 15px;
-    outline: none;
-    border: none;
-    background-color: rgb(243, 243, 243);
-    cursor: pointer;
 }
 
-.button2:hover{
-    background-color: #9065CA;
-    color: #fff;
+.cerrarsesion:hover{
+    color: rgb(219, 71, 71);
 }
